fix: cli ghpages

--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "repo": "https://github.com/victorianastasi/cats-shop",
+            "branch": "gh-pages"
+          }
         }
       }
     }
